force-app/main/default/objects/API_Detail__mdt/API_Detail__mdt.object-meta.xml
<CustomObject>
    <description>API_Detail : Custom metadata used for storing API details.</description>
    <label>API Detail</label>
    <pluralLabel>API Details</pluralLabel>
</CustomObject>