force-app/main/default/objects/API_Detail__mdt/fields/Http_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Http_Endpoint__c</fullName>
    <description>Http_Endpoint used for REST API Endpoint</description>
    <label>Http Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>