force-app/main/default/objects/API_Detail__mdt/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <description>Http_Method : This field is used for storing Http method of the API call</description>
    <label>Http Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>