force-app/main/default/objects/API_Detail__mdt/fields/Http_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Http_Timeout__c</fullName>
    <description>Http_Timeout : Used to store http call timeout time</description>
    <label>Http Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>